src/index.css
html {
  scroll-behavior: smooth;
}

.long-slider .react-multiple-carousel__arrow {
  position: absolute;
  outline: 0;
  transition: all 0.5s;
  border-radius: 35px;
  z-index: 1000;
  border: 0;
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(2px);
  min-width: 30px;
  min-height: 30px;
  opacity: 1;
  cursor: pointer;
}

.long-slider .react-multiple-carousel__arrow::before {
  font-size: 12px;
}

.long-slider .react-multiple-carousel__arrow--left {
  left: calc(0% + 1px);
}
.long-slider .react-multiple-carousel__arrow--right {
  right: calc(0% + 1px);
}

/* slide-show  */
.slide-show .react-multiple-carousel__arrow {
  position: absolute;
  outline: 0;
  transition: all 0.5s;
  border-radius: 35px;
  z-index: 1000;
  border: 0;
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(6px);
  min-width: 30px;
  min-height: 30px;
  opacity: 1;
  cursor: pointer;
}

.slide-show .react-multiple-carousel__arrow::before {
  font-size: 12px;
}

.slide-show .react-multiple-carousel__arrow--left {
  left: calc(0% + 1px);
}
.slide-show .react-multiple-carousel__arrow--right {
  right: calc(0% + 1px);
}

.carousel .thumbs-wrapper {
  margin-top: 10px;
  overflow: hidden;
  text-align: center;
}
.carousel .thumb.selected,
.carousel .thumb:hover {
  border: 2px solid #2ac616 !important;
  border-radius: 5px;
}

.carousel.carousel-slider .control-arrow {
  top: 50% !important;
  color: #fff;
  font-size: 26px;
  padding: 5px;
  height: 100px;
  transform: translateY(-50%);
}

.carousel .control-prev.control-arrow {
  left: 0;
  height: 100px;
}

